--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-autogen-agentchat = "0.4.7"
-autogen-ext = {version = "0.4.7", extras = ["openai", "azure"]}
+autogen-agentchat = "^0.4.9"
+autogen-ext = {extras = ["azure", "openai"], version = "^0.4.9"}
 azure-identity = "1.20.0"
 python-dotenv = "^1.0.1"
 black = "^25.1.0"
