--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["jjgriff93 <me@jamesgriff.in>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.13"
 autogen-agentchat = "^0.4.9"
 autogen-ext = {extras = ["azure", "openai"], version = "^0.4.9"}
 azure-identity = "1.20.0"
 python-dotenv = "^1.0.1"
 black = "^25.1.0"
+fastapi = "^0.115.12"
+uvicorn = {extras = ["standard"], version = "^0.34.0"}
+websockets = "^15.0.1"
 
 
 [build-system]
